<package>
  <name>rbx1</name>
  <version>0.4.0</version>
  <description>ROS By Example Volume 1</description>
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rbx_vol_1</url>

  <url type="bugtracker">https://github.com/pirobot/rbx1/issues</url>

  <author email="patrick@pirobot.org">Maintained by Patrick Goebel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>calib_odom</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
